--- a/kitty.conf
+++ b/kitty.conf
@@ -43,8 +43,8 @@ color15  #928374
 # Transparency (0.0 = fully transparent, 1.0 = opaque)
 background_opacity 0.7
 
-# Disable window decorations (no title bar or borders)
-window_decorations none
+# Enable window decorations (adds title bar and borders)
+window_decorations titlebar
 
 # Optional: background blur (if compositor supports it, e.g. picom)
 # background_blur 5
@@ -67,8 +67,8 @@ window_decorations none
 # Disable the audio bell
 enable_audio_bell no
 
-# Hide the mouse cursor when typing
-hide_window_decorations yes
+# Show window decorations (don’t hide them)
+hide_window_decorations no
 
 # Allow window resizing freely
 resize_in_steps no
